version 1.9.3, in progress
- New estimation command "biprobit" (bivariate probit)
- New panel unit-root command "levinlin"
- Add help text for "dpanel"
- GUI graphs: allow option of replacing the original graph
  with a zoomed view
- Panel time-series graphs in GUI: add another format option
  and try to use date information if available
- lrvar function: allow vector argument in place of series
- Iterated GMM: raise default maximum iterations to 250, and
  add a new "set" variable, "gmm_maxiter"
- Fix bug: ensure that the main window gets updated when
  series are deleted via the console
- Fix bug: don't show an excessively long list of series in
  the dialog box for confirming deletion of series
- Fix bug: creation of matrices from data series in a loop
  which changes the sub-sample via --restrict
- Fix bug: setting "halt_on_error" off should not suppress
  printing of error messages

2010-11-03 version 1.9.2
- New command "fractint" (fractional integration test)
- The "pergm" command no longer does fractional integration
  testing as a side-effect
- The "open" command now supports http to get a data file
  (of any supported format) directly from the internet
- "kalman": allow a constant term in the state transition
  equation
- "modprint" command: allow a string literal for the second
  argument; support both comma- and space-separation of
  parameter names
- "dataset expand" command: add an "interp" modifier to use
  interpolation rather than repetition of values; also
  remove the option of going directly from annual to
  monthly frequency
- "heckit" command: enable the --robust option for QML standard
  errors and the --quiet option
- "mahal" command: add a --quiet option
- "arima" command: add new option --save-ehat
- pdf function: support the poisson and binomial distributions
  (giving the probability mass)
- New function invmills() to get the inverse Mills ratio
- New function bwfilt() to compute the Butterworth filter