@@ -79,6 +79,8 @@ void gretl_exec_state_uncomment (ExecState *s);
 
 void gretl_exec_state_transcribe_flags (ExecState *s, CMD *cmd);
 
+void gretl_exec_state_set_model (ExecState *s, MODEL *pmod);
+
 int process_command_error (CMD *cmd, int err);
 
 int maybe_exec_line (ExecState *s, double ***pZ, DATAINFO *pdinfo);
